# trener-ur12-driver

./: DEVLOG.md  Dockerfile.ros2  PLAN.md  README.md  commands.script  docker-compose.yml  docker-entrypoint.sh
programs/: default.installation  default.variables  ur12_program.script
ros2_ws/: demo.sh  stress_test.sh
ros2_ws/src/ur12_driver/: CMakeLists.txt  package.xml  setup.cfg  setup.py  ur12_hardware_interface.xml
ros2_ws/src/ur12_driver/config/: ur12_controllers.yaml
ros2_ws/src/ur12_driver/include/ur12_driver/: dashboard_client.hpp  rtde_client.hpp  script_client.hpp  ur12_hardware_interface.hpp  ur_driver_node.hpp
ros2_ws/src/ur12_driver/launch/: ur12_bringup.launch.py
ros2_ws/src/ur12_driver/src/: cancel_goal.cpp  main.cpp  send_burst.cpp  ur12_hardware_interface.cpp  ur_driver_node.cpp
ros2_ws/src/ur12_driver/test/: test_dashboard_client.cpp  test_rtde_client.cpp  test_script_client.cpp
ros2_ws/src/ur12_driver/ur12_driver/: dashboard_client.py  rtde_client.py  script_client.py  ur_driver_node.py
ros2_ws/src/ur12_driver/urdf/: ur12.urdf
ros2_ws/src/ur12_driver_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/ur12_driver_msgs/action/: MoveFirstJoint.action  MoveHome.action  MoveJoints.action
ros2_ws/src/ur12_driver_msgs/srv/: GetRobotMode.srv  MoveFirstJoint.srv
